# vacancy-search

./: .coveragerc  .env.example  .gitignore  README.md  pyproject.toml
htmlcov/: index.html
sql/: schema.sql
src/: api_client.py  config.py  database.py  db_manager.py  logger.py  main.py  utils.py
tests/: conftest.py  test_api_client.py  test_config.py  test_db_manager.py  test_utils.py
